--- a/kube/knote.yaml
+++ b/kube/knote.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: knote
+  namespace: knote-sample-app
 spec:
   selector:
     app: knote
@@ -14,6 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: knote
+  namespace: knote-sample-app
 spec:
   replicas: 1
   selector:
